--- a/css/style.css
+++ b/css/style.css
@@ -5,19 +5,24 @@ html {
 }
 
 .wrapper {
-  display: inline-block;
-  width: 410px;
+  font-family: 'Lato';
+  width: 420px;
   height: auto;
-  margin: 100px 5px;
+  margin: 100px auto;
   padding: 30px;
-  background-color: #ffffff;
+  background-color: #f5f5f5;
 }
 
-h2, h3, h4 {
+h2, h3, h4, ul {
   color: #263555;
+}
+
+.line {
+  width: 380px;
+  border-bottom: 1px solid #000000;
 }
 
 ul {
-  color: #263555;
+  column-count: 2;
   list-style-type: none;
 }
