--- a/additional/css/styles.css
+++ b/additional/css/styles.css
@@ -21,5 +21,5 @@ h2, h3, ul {
   width: 480px;
   padding: 10px;
   background-color: #e6e6fa;
-  list-style-image: url('../../img/module-3-task-5-list.jpg');
+  list-style-image: url('../../img/arrow.jpg');
 }
