--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background: url('../img/beach.jpg') no-repeat;
+  background-image: url('../img/beach.jpg') no-repeat;
   background-size: cover;
   font-family: sans-serif;
 }
