--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 body {
-  background-image: url('../img/beach.jpg') no-repeat;
+  background: url('../img/beach.jpg') no-repeat;
   background-size: cover;
-  font-family: sans-serif;
 }
 
 .wrapper {
