--- a/css/style.css
+++ b/css/style.css
@@ -2,17 +2,18 @@ body {
   background: url('../img/gray.jpg') no-repeat;
   background-size: cover;
   font-family: 'Pathway Gothic One', sans-serif;
+  margin: 0px;
 }
 
 .wrapper {
-  margin: 100px;
+  background: #00796b;
 }
 
 .top {
   color: #000;
   background: hollow;
-  width: 1024px;
-  margin: 0 auto 50px;
+  width:  auto;
+  margin: 0 0 0px;
   font-size: 25px;
 }
 
@@ -31,45 +32,13 @@ body {
   color: #000;
 }
 
-.menu__item:hover {
-  color: #000;
-}
-
-#.hqc {
-  display: none;
-  position: absolute;
-  left: -15px;
-  top: 10px;
+.toright{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
   list-style: none;
-  background: #fff;
-  border-radius: 2%;
-  width: 130px;
-  margin-top: 20px;
-  padding: 10px 5px;
-  color: #263555;
-}
-
-#.hqc::before {
-  content: "";
-  display: block;
-  position: absolute;
-  border-bottom: 5px solid #fff;
-  border-left: 7px solid transparent;
-  border-right: 7px solid transparent;
-  bottom: 77px;
-  left: 20px;
-}
-
-#.menu__item:hover>.hqc {
-  display: block;
-  background: #fff;
-}
-
-#.hqc__item {
-  margin-top: 2px;
-  font-size: 11px;
-  text-align: center;
-  font-size: 15px;
+  padding: 0;
 }
 
 .hqc,
@@ -85,7 +54,6 @@ body {
   width: 130px;
   margin-top: 20px;
   padding: 10px 5px;
-  color: #0f1626;
 }
 
 .hqc::before,
@@ -105,7 +73,7 @@ body {
 .menu__item:hover>.pli,
 .meny__item:hover>.arm {
   display: block;
-  background: #fff;
+  #background: #fff;
 }
 
 .hqc__item,
@@ -114,53 +82,17 @@ body {
   margin-top: 2px;
   font-size: 11px;
   text-align: center;
-  font-size: 15px;
+  font-size: 20px;
 }
 
-#.arm {
-  display: none;
-  position: absolute;
-  left: -15px;
-  top: 15px;
+.boxes {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
   list-style: none;
-  background: #fff;
-  border-radius: 2%;
-  width: 130px;
-  margin-top: 20px;
-  padding: 10px 5px;
-  color: #263555;
+  padding: 0;
 }
-
-#.arm::before {
-  content: "";
-  display: block;
-  position: absolute;
-  border-bottom: 5px solid #fff;
-  border-left: 7px solid transparent;
-  border-right: 7px solid transparent;
-  bottom: 77px;
-  left: 20px;
-}
-
-#.meny__item:hover>.arm {
-  display: block;
-  background: #fff;
-}
-
-#.arm__item {
-  margin-top: 2px;
-  font-size: 11px;
-  text-align: center;
-  font-size: 15px;
-}
-
-.godpic {
-  position: relative;
-  width: 50px;
-  height: 100px;
-}
-
-
 
 .totop {
   position: fixed;
